--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "virtual-pets",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "@tsconfig/svelte": "^5.0.0",
-    "autoprefixer": "^10.4.16",
-    "dat.gui": "^0.7.9",
-    "postcss": "^8.4.31",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.6",
-    "tailwindcss": "^3.3.3",
-    "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  },
-  "dependencies": {
-    "pixi.js": "^7.3.1"
-  }
+	"name": "virtual-pets",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.16",
+		"dat.gui": "^0.7.9",
+		"phosphor-svelte": "^1.3.0",
+		"postcss": "^8.4.31",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
+	},
+	"type": "module",
+	"dependencies": {
+		"@pixi/layers": "^2.1.0",
+		"@pixi/math-extras": "^7.3.1",
+		"@types/set-cookie-parser": "^2.4.5",
+		"pixi.js": "^7.3.1",
+		"set-cookie-parser": "^2.6.0"
+	}
 }
